[tool.poetry]
name = "mcpdf"
version = "0.1.0"
description = ""
authors = ["Alessandro Candido <candido.ale@gmail.com>"]
packages = [
  { include = "mcpdf", from = "src" },
  { include = "frompdf", from = "src" },
  { include = "frompseudodis", from = "src" },
  { include = "fromdis", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
a3b2bbc3ced97675ac3a71df45f55ba = "^6.4.0"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
ipython = "^8.2.0"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
