[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mcpdf"
version = "0.1.0"
description = ""
authors = ["Alessandro Candido <candido.ale@gmail.com>"]
packages = [{ include = "mcpdf", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
a3b2bbc3ced97675ac3a71df45f55ba = "^6.4.0"
numpy = "^1.22.3"
PyYAML = "^6.0"
eko = { version = "^0.10.0", extras = ["box"] }
click = "^8.1.3"
rich = "^12.5.1"

[tool.poetry.dev-dependencies]
ipython = "^8.2.0"
pdbpp = "^0.10.3"
ipykernel = "^6.13.0"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"

[tool.poetry.scripts]
mcpdf = "mcpdf.cli:command"

[tool.poe.tasks]
# docs = { "shell" = "cd doc; make html" }
install-nb = { "shell" = "python -m ipykernel install --user --name=$(basename $(poetry env info -p))" }
